--- a/notebooks/weighting.ipynb
+++ b/notebooks/weighting.ipynb
@@ -32,12 +32,96 @@
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e340=/Users/phil/Dropbox/e340_coursework/e340_2017_spring\r\n",
+      "mac2=/Volumes/mac2/phil\r\n",
+      "RSTUDIO_WHICH_R=/usr/local/bin/R\r\n",
+      "_CONDA_PYTHON2=/Users/phil/mini35/bin/python\r\n",
+      "_CONDA_SET_PROJ_LIB=PROJ_LIB\r\n",
+      "PROJ_LIB=/Users/phil/mini35/envs/py36/share/proj\r\n",
+      "CMAKE_COMPILER=gfortran\r\n",
+      "a301w=/Users/phil/repos/a301_web\r\n",
+      "MRTSWATH_DATA_DIR=/Users/phil/bin/mrtswath/data\r\n",
+      "TERM=xterm-color\r\n",
+      "SHELL=/bin/bash\r\n",
+      "GISTY_DIR=/Users/phil/repos/gists\r\n",
+      "CLICOLOR=1\r\n",
+      "TMPDIR=/var/folders/xw/gs1bbq9n6213d1mf4v8qhsnm0000gr/T/\r\n",
+      "Apple_PubSub_Socket_Render=/private/tmp/com.apple.launchd.FtKvsulPW7/Render\r\n",
+      "a405d=/Users/phil/repos/atsc405_docs\r\n",
+      "GISTY_ACCESS_TOKEN=4de9fac7f7c980509bc97264766ee31c6d66a85c\r\n",
+      "or=/Users/phil/repos/org\r\n",
+      "LC_ALL=en_US.UTF-8\r\n",
+      "econ=/Users/phil/Dropbox/e340\\ FILES\\ FOR\\ CONNECT\r\n",
+      "git=ssh://jcole@roc.eos.ubc.ca/users/phil/repos/feedbacks\r\n",
+      "XTIDE_DEFAULT_LOCATION=Vancouver, British Columbia\r\n",
+      "EMACS=TRUE\r\n",
+      "USER=phil\r\n",
+      "TERMCAP=\r\n",
+      "SSH_AUTH_SOCK=/private/tmp/com.apple.launchd.ttfc54cjwi/Listeners\r\n",
+      "__CF_USER_TEXT_ENCODING=0x1F8:0x0:0x52\r\n",
+      "JPY_PARENT_PID=90478\r\n",
+      "PAGER=cat\r\n",
+      "COLUMNS=74\r\n",
+      "a405=/Users/phil/repos/A405\r\n",
+      "rm=/Users/phil/repos/readmes\r\n",
+      "PATH=/Users/phil/mini35/envs/py36/bin:/Users/phil/mini35/envs/py36/bin:/Applications/Emacs.app/Contents/MacOS:/Applications/Emacs.app/Contents/MacOS/bin:/Users/phil/bin:/usr/local/texlive/2015/bin/x86_64-darwin/:/usr/local/MacGPG2/bin:/Users/phil/mini35/bin:/usr/local/bin:/Applications/MATLAB_R2015b.app/bin:/usr/local/texlive/2015/bin/x86_64-darwin:/usr/local/bin:/Users/phil/mini35/bin:/Applications/Emacs.app/Contents/MacOS:/Applications/Emacs.app/Contents/MacOS/bin:/Users/phil/bin:/usr/local/texlive/2015/bin/x86_64-darwin/:/usr/local/MacGPG2/bin:/Users/phil/mini35/bin:/usr/local/bin:/Applications/MATLAB_R2015b.app/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/opt/X11/bin:/usr/local/git/bin:/usr/local/MacGPG2/bin:/usr/texbin:/Applications/Emacs.app/Contents/MacOS/bin-x86_64-10_9:/Applications/Emacs.app/Contents/MacOS/libexec-x86_64-10_9:/Users/phil/.local/bin:/Users/phil/bin/mrtswath/bin:/Users/phil/.local/bin:/Users/phil/bin/mrtswath/bin\r\n",
+      "CPL_ZIP_ENCODING=UTF-8\r\n",
+      "CONDA_PATH_BACKUP=/Applications/Emacs.app/Contents/MacOS:/Applications/Emacs.app/Contents/MacOS/bin:/Users/phil/bin:/usr/local/texlive/2015/bin/x86_64-darwin/:/usr/local/MacGPG2/bin:/Users/phil/mini35/bin:/usr/local/bin:/Applications/MATLAB_R2015b.app/bin:/usr/local/texlive/2015/bin/x86_64-darwin:/usr/local/bin:/Users/phil/mini35/bin:/Applications/Emacs.app/Contents/MacOS:/Applications/Emacs.app/Contents/MacOS/bin:/Users/phil/bin:/usr/local/texlive/2015/bin/x86_64-darwin/:/usr/local/MacGPG2/bin:/Users/phil/mini35/bin:/usr/local/bin:/Applications/MATLAB_R2015b.app/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/opt/X11/bin:/usr/local/git/bin:/usr/local/MacGPG2/bin:/usr/texbin:/Applications/Emacs.app/Contents/MacOS/bin-x86_64-10_9:/Applications/Emacs.app/Contents/MacOS/libexec-x86_64-10_9:/Users/phil/.local/bin:/Users/phil/bin/mrtswath/bin:/Users/phil/.local/bin:/Users/phil/bin/mrtswath/bin\r\n",
+      "_=/usr/bin/printenv\r\n",
+      "CONDA_PREFIX=/Users/phil/mini35/envs/py36\r\n",
+      "PWD=/Users/phil/repos/e582_code/notebooks\r\n",
+      "a301=/Users/phil/repos/a301_2016\r\n",
+      "MPLBACKEND=module://ipykernel.pylab.backend_inline\r\n",
+      "EDITOR=/Applications/Emacs.app/Contents/MacOS/bin/emacsclient\r\n",
+      "LANG=en_US.UTF-8\r\n",
+      "eweb=/Users/phil/repos/e582_web\r\n",
+      "e340f=/Users/phil/Dropbox/e340 FILES FOR CONNECT\r\n",
+      "stat=/Users/phil/repos/les_plots/stat_plot\r\n",
+      "MATLAB_EXECUTABLE=/Applications/MATLAB_R2015b.app/bin/matlab\r\n",
+      "QMAKESPEC=unsupported/macx-clang-libc++\r\n",
+      "e340g=/Users/phil/airwatch/Personal Content/EOSC 340 Student Info Share (Harris, Sara)\r\n",
+      "XPC_FLAGS=0x0\r\n",
+      "aweb=/Users/phil/repos/atsc301_web\r\n",
+      "GDAL_DATA=/Users/phil/mini35/envs/py36/share/gdal\r\n",
+      "XPC_SERVICE_NAME=0\r\n",
+      "CXX=g++\r\n",
+      "HOME=/Users/phil\r\n",
+      "SHLVL=2\r\n",
+      "acode=/Users/phil/repos/a301_2014\r\n",
+      "eold=/Users/phil/Dropbox/e340_coursework/e340_2016_fall\r\n",
+      "CONDA_PS1_BACKUP=|Pr0mPT|\\w|\\w  \\u@\\h%\\n$ \r\n",
+      "PYTHONPATH=/Users/phil/lib/python:/Users/phil/repos/e582_code:/Users/phil/repos:/Users/phil/repos/atsc500/a500_code/:/Users/phil/repos/A212:/Users/phil/repos/A405:/Users/phil/repos/pythonlibs:/Users/phil/repos/ent_analysis_loh\r\n",
+      "LOGNAME=phil\r\n",
+      "CMAKE_MACHINE=osx\r\n",
+      "a212=/Users/phil/repos/A212\r\n",
+      "VISUAL=emacsclient\r\n",
+      "e340code=/Users/phil/repos/e340repo\r\n",
+      "BITLY_ACCESS_TOKEN=c984e550ada5ef8846c5a9bf4bd602ca086154b3\r\n",
+      "CONDA_DEFAULT_ENV=py36\r\n",
+      "a212d=/Users/phil/repos/atsc212_docs\r\n",
+      "e13=/Users/phil/repos/e340_2013wT2\r\n",
+      "ecode=/Users/phil/repos/e582_code\r\n",
+      "DISPLAY=/private/tmp/com.apple.launchd.aK4uWEbwCF/org.macosforge.xquartz:0\r\n",
+      "CMAKE_PREFIX_PATH=/usr/local\r\n",
+      "CC=gcc\r\n",
+      "GIT_PAGER=cat\r\n",
+      "INSIDE_EMACS=25.0.92.1,comint\r\n",
+      "MRTSWATH_HOME=/Users/phil/bin/mrtswath\r\n",
+      "e14=/Users/phil/Dropbox/e340_2012/2014 - Fall\r\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from __future__ import division\n",
-    "% matplotlib inline"
+    "% matplotlib inline\n",
+    "!printenv"
    ]
   },
   {
@@ -430,7 +514,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -454,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
