--- a/notebooks/seaice.ipynb
+++ b/notebooks/seaice.ipynb
@@ -156,7 +156,7 @@
     "    # handle Path objects\n",
     "    #\n",
     "    with open(str(a_file),'rb') as infile:\n",
-    "        filestring=str(a_file)\n",
+    "        filestring=str(a_file)l\n",
     "        #\n",
     "        # we don't want the high reolution or time data files\n",
     "        #\n",
@@ -645,7 +645,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
