--- a/notebooks/aster_parse.ipynb
+++ b/notebooks/aster_parse.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -34,7 +34,9 @@
     "import h5py\n",
     "from e582utils.parse_odl import parse_odl\n",
     "import pprint\n",
-    "from e582utils.data_read import download"
+    "from e582utils.data_read import download\n",
+    "import dateutil\n",
+    "import datetime, pytz"
    ]
   },
   {
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -198,6 +200,85 @@
     "right_lon= keep_dict['coremetadata.0_GLOSDS']['INVENTORYMETADATA']\\\n",
     "                 ['BOUNDINGRECTANGLE']['EASTBOUNDINGCOORDINATE']['VALUE']\n",
     "print(right_lon)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Convert the timestamp string to a datetime object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('20050519', '181928427000Z')"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image_date=keep_dict['coremetadata.0_GLOSDS']['INVENTORYMETADATA']['SINGLEDATETIME']['CALENDARDATE']['VALUE']\n",
+    "image_time=keep_dict['coremetadata.0_GLOSDS']['INVENTORYMETADATA']['SINGLEDATETIME']['TIMEOFDAY']['VALUE']\n",
+    "image_date,image_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "image_dt=dateutil.parser.parse(image_date)\n",
+    "hours,minutes,seconds=int(image_time[:2]),int(image_time[2:4]),float(image_time[4:9])\n",
+    "seconds,milliseconds=divmod(seconds,1000)\n",
+    "seconds,microseconds=int(seconds),int(milliseconds*1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "image_date=datetime.datetime(image_dt.year,image_dt.month,\n",
+    "                             image_dt.day,hours,minutes,seconds,microseconds,tzinfo=pytz.utc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2005, 5, 19, 18, 19, 28, 427000, tzinfo=<UTC>)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image_date"
    ]
   },
   {
