--- a/notebooks/aster_parse.ipynb
+++ b/notebooks/aster_parse.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Notebook demo: parsing NASA EOSDIS core metadata\n",
     "\n",
@@ -23,9 +26,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -35,15 +38,18 @@
     "from e582utils.parse_odl import parse_odl\n",
     "import pprint\n",
     "from e582utils.data_read import download\n",
-    "import dateutil\n",
-    "import datetime, pytz"
+    "from dateutil.parser import parse\n",
+    "import datetime, pytz\n",
+    "pp=pprint.PrettyPrinter(indent=4)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -67,7 +73,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### The metadata attributes are saved as byte strings in hdf\n",
     "\n",
@@ -80,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -105,14 +114,16 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['productmetadata.0_GLOSDS', 'productmetadata.1_GLOSDS', 'productmetadata.s_GLOSDS', 'coremetadata.0_GLOSDS', 'productmetadata.t_GLOSDS', 'productmetadata.v_GLOSDS']\n"
+      "['productmetadata.0_GLOSDS', 'productmetadata.1_GLOSDS', 'productmetadata.v_GLOSDS', 'productmetadata.s_GLOSDS', 'productmetadata.t_GLOSDS', 'coremetadata.0_GLOSDS']\n"
      ]
     }
    ],
@@ -122,7 +133,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Write all metadata to a text file\n",
     "\n",
@@ -147,9 +161,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "### get an example value"
+    "### Example: bounding rectangle in lat lon"
    ]
   },
   {
@@ -163,29 +180,28 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'EASTBOUNDINGCOORDINATE': {'NUM_VAL': 1, 'VALUE': -110.126254249257},\n",
-       " 'NORTHBOUNDINGCOORDINATE': {'NUM_VAL': 1, 'VALUE': 38.682686887734},\n",
-       " 'SOUTHBOUNDINGCOORDINATE': {'NUM_VAL': 1, 'VALUE': 37.9982112531324},\n",
-       " 'WESTBOUNDINGCOORDINATE': {'NUM_VAL': 1, 'VALUE': -111.102055080818}}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{   'EASTBOUNDINGCOORDINATE': {'NUM_VAL': 1, 'VALUE': -110.126254249257},\n",
+      "    'NORTHBOUNDINGCOORDINATE': {'NUM_VAL': 1, 'VALUE': 38.682686887734},\n",
+      "    'SOUTHBOUNDINGCOORDINATE': {'NUM_VAL': 1, 'VALUE': 37.9982112531324},\n",
+      "    'WESTBOUNDINGCOORDINATE': {'NUM_VAL': 1, 'VALUE': -111.102055080818}}\n"
+     ]
     }
    ],
    "source": [
     "rectangle= keep_dict['coremetadata.0_GLOSDS']['INVENTORYMETADATA']['BOUNDINGRECTANGLE']\n",
-    "rectangle"
+    "pp.pprint(rectangle)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -204,16 +220,56 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "### Bounding rectangle in UTM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{   'LOWERLEFTM': {'NUM_VAL': 2, 'VALUE': [4205970.0, 491040.0]},\n",
+      "    'LOWERRIGHTM': {'NUM_VAL': 2, 'VALUE': [4205970.0, 576000.0]},\n",
+      "    'UPPERLEFTM': {'NUM_VAL': 2, 'VALUE': [4281570.0, 491040.0]},\n",
+      "    'UPPERRIGHTM': {'NUM_VAL': 2, 'VALUE': [4281570.0, 576000.0]}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "pp.pprint(keep_dict['productmetadata.1_GLOSDS']['PRODUCTGENERICMETADATA']\\\n",
+    "                      ['SCENEFOURCORNERSMETERS'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Convert the timestamp string to a datetime object"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -222,48 +278,57 @@
        "('20050519', '181928427000Z')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "image_date=keep_dict['coremetadata.0_GLOSDS']['INVENTORYMETADATA']['SINGLEDATETIME']['CALENDARDATE']['VALUE']\n",
-    "image_time=keep_dict['coremetadata.0_GLOSDS']['INVENTORYMETADATA']['SINGLEDATETIME']['TIMEOFDAY']['VALUE']\n",
+    "image_date=keep_dict['coremetadata.0_GLOSDS']['INVENTORYMETADATA']\\\n",
+    "                    ['SINGLEDATETIME']['CALENDARDATE']['VALUE']\n",
+    "image_time=keep_dict['coremetadata.0_GLOSDS']['INVENTORYMETADATA']\\\n",
+    "                      ['SINGLEDATETIME']['TIMEOFDAY']['VALUE']\n",
     "image_date,image_time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "image_dt=dateutil.parser.parse(image_date)\n",
-    "hours,minutes,seconds=int(image_time[:2]),int(image_time[2:4]),float(image_time[4:9])\n",
+    "image_dt=parse(image_date)\n",
+    "hours,minutes,seconds=(int(image_time[:2]),\n",
+    "                           int(image_time[2:4]),float(image_time[4:9]))\n",
     "seconds,milliseconds=divmod(seconds,1000)\n",
     "seconds,microseconds=int(seconds),int(milliseconds*1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "image_date=datetime.datetime(image_dt.year,image_dt.month,\n",
+    "image_dt=datetime.datetime(image_dt.year,image_dt.month,\n",
     "                             image_dt.day,hours,minutes,seconds,microseconds,tzinfo=pytz.utc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -272,23 +337,14 @@
        "datetime.datetime(2005, 5, 19, 18, 19, 28, 427000, tzinfo=<UTC>)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "image_date"
+    "image_dt"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -308,7 +364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
