new download function with internal cleanup

--- a/notebooks/web_download.ipynb
+++ b/notebooks/web_download.ipynb
@@ -2,10 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Download all aqua and tera par files for all days from 2002 to 2017 inclusive\n",
     "\n",
@@ -21,11 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -35,83 +28,70 @@
       "writing to: A2002001.L3m_DAY_PAR_par_4km.nc\n",
       "writing temporary file A2002001.L3m_DAY_PAR_par_4km.nc_tmp\n",
       "requests.get() returned \"Not found\" with filename A2002001.L3m_DAY_PAR_par_4km.nc\n",
+      "clean up: removing A2002001.L3m_DAY_PAR_par_4km.nc_tmp\n",
       "trying https://oceandata.sci.gsfc.nasa.gov/cgi/getfile/T2002001.L3m_DAY_PAR_par_4km.nc\n",
       "writing to: T2002001.L3m_DAY_PAR_par_4km.nc\n",
-      "writing temporary file T2002001.L3m_DAY_PAR_par_4km.nc_tmp\n",
-      "downloaded T2002001.L3m_DAY_PAR_par_4km.nc\n",
-      "size = 29764879\n",
+      "\n",
+      "T2002001.L3m_DAY_PAR_par_4km.nc already exists\n",
+      "and is 29764879 bytes\n",
+      "will not overwrite\n",
+      "\n",
       "--------------------\n",
       "trying https://oceandata.sci.gsfc.nasa.gov/cgi/getfile/A2002002.L3m_DAY_PAR_par_4km.nc\n",
       "writing to: A2002002.L3m_DAY_PAR_par_4km.nc\n",
       "writing temporary file A2002002.L3m_DAY_PAR_par_4km.nc_tmp\n",
       "requests.get() returned \"Not found\" with filename A2002002.L3m_DAY_PAR_par_4km.nc\n",
+      "clean up: removing A2002002.L3m_DAY_PAR_par_4km.nc_tmp\n",
       "trying https://oceandata.sci.gsfc.nasa.gov/cgi/getfile/T2002002.L3m_DAY_PAR_par_4km.nc\n",
       "writing to: T2002002.L3m_DAY_PAR_par_4km.nc\n",
-      "writing temporary file T2002002.L3m_DAY_PAR_par_4km.nc_tmp\n",
-      "downloaded T2002002.L3m_DAY_PAR_par_4km.nc\n",
-      "size = 29447913\n",
+      "\n",
+      "T2002002.L3m_DAY_PAR_par_4km.nc already exists\n",
+      "and is 29447913 bytes\n",
+      "will not overwrite\n",
+      "\n",
       "--------------------\n",
       "trying https://oceandata.sci.gsfc.nasa.gov/cgi/getfile/A2002003.L3m_DAY_PAR_par_4km.nc\n",
       "writing to: A2002003.L3m_DAY_PAR_par_4km.nc\n",
       "writing temporary file A2002003.L3m_DAY_PAR_par_4km.nc_tmp\n",
       "requests.get() returned \"Not found\" with filename A2002003.L3m_DAY_PAR_par_4km.nc\n",
+      "clean up: removing A2002003.L3m_DAY_PAR_par_4km.nc_tmp\n",
       "trying https://oceandata.sci.gsfc.nasa.gov/cgi/getfile/T2002003.L3m_DAY_PAR_par_4km.nc\n",
       "writing to: T2002003.L3m_DAY_PAR_par_4km.nc\n",
-      "writing temporary file T2002003.L3m_DAY_PAR_par_4km.nc_tmp\n",
-      "downloaded T2002003.L3m_DAY_PAR_par_4km.nc\n",
-      "size = 29658400\n",
-      "--------------------\n",
-      "trying https://oceandata.sci.gsfc.nasa.gov/cgi/getfile/A2002004.L3m_DAY_PAR_par_4km.nc\n",
-      "writing to: A2002004.L3m_DAY_PAR_par_4km.nc\n",
-      "writing temporary file A2002004.L3m_DAY_PAR_par_4km.nc_tmp\n",
-      "requests.get() returned \"Not found\" with filename A2002004.L3m_DAY_PAR_par_4km.nc\n",
-      "trying https://oceandata.sci.gsfc.nasa.gov/cgi/getfile/T2002004.L3m_DAY_PAR_par_4km.nc\n",
-      "writing to: T2002004.L3m_DAY_PAR_par_4km.nc\n",
-      "writing temporary file T2002004.L3m_DAY_PAR_par_4km.nc_tmp\n",
-      "downloaded T2002004.L3m_DAY_PAR_par_4km.nc\n",
-      "size = 29622574\n",
+      "\n",
+      "T2002003.L3m_DAY_PAR_par_4km.nc already exists\n",
+      "and is 29658400 bytes\n",
+      "will not overwrite\n",
+      "\n",
       "--------------------\n",
       "trying https://oceandata.sci.gsfc.nasa.gov/cgi/getfile/A2003001.L3m_DAY_PAR_par_4km.nc\n",
       "writing to: A2003001.L3m_DAY_PAR_par_4km.nc\n",
-      "writing temporary file A2003001.L3m_DAY_PAR_par_4km.nc_tmp\n",
-      "downloaded A2003001.L3m_DAY_PAR_par_4km.nc\n",
-      "size = 44783336\n",
+      "\n",
+      "A2003001.L3m_DAY_PAR_par_4km.nc already exists\n",
+      "and is 44783336 bytes\n",
+      "will not overwrite\n",
+      "\n",
       "trying https://oceandata.sci.gsfc.nasa.gov/cgi/getfile/T2003001.L3m_DAY_PAR_par_4km.nc\n",
       "writing to: T2003001.L3m_DAY_PAR_par_4km.nc\n",
-      "writing temporary file T2003001.L3m_DAY_PAR_par_4km.nc_tmp\n",
-      "downloaded T2003001.L3m_DAY_PAR_par_4km.nc\n",
-      "size = 29461681\n",
+      "\n",
+      "T2003001.L3m_DAY_PAR_par_4km.nc already exists\n",
+      "and is 29461681 bytes\n",
+      "will not overwrite\n",
+      "\n",
       "--------------------\n",
       "trying https://oceandata.sci.gsfc.nasa.gov/cgi/getfile/A2003002.L3m_DAY_PAR_par_4km.nc\n",
       "writing to: A2003002.L3m_DAY_PAR_par_4km.nc\n",
-      "writing temporary file A2003002.L3m_DAY_PAR_par_4km.nc_tmp\n",
-      "downloaded A2003002.L3m_DAY_PAR_par_4km.nc\n",
-      "size = 44936684\n",
+      "\n",
+      "A2003002.L3m_DAY_PAR_par_4km.nc already exists\n",
+      "and is 44936684 bytes\n",
+      "will not overwrite\n",
+      "\n",
       "trying https://oceandata.sci.gsfc.nasa.gov/cgi/getfile/T2003002.L3m_DAY_PAR_par_4km.nc\n",
       "writing to: T2003002.L3m_DAY_PAR_par_4km.nc\n",
-      "writing temporary file T2003002.L3m_DAY_PAR_par_4km.nc_tmp\n",
-      "downloaded T2003002.L3m_DAY_PAR_par_4km.nc\n",
-      "size = 29478149\n",
-      "--------------------\n",
-      "trying https://oceandata.sci.gsfc.nasa.gov/cgi/getfile/A2003003.L3m_DAY_PAR_par_4km.nc\n",
-      "writing to: A2003003.L3m_DAY_PAR_par_4km.nc\n",
-      "writing temporary file A2003003.L3m_DAY_PAR_par_4km.nc_tmp\n",
-      "downloaded A2003003.L3m_DAY_PAR_par_4km.nc\n",
-      "size = 44399292\n",
-      "trying https://oceandata.sci.gsfc.nasa.gov/cgi/getfile/T2003003.L3m_DAY_PAR_par_4km.nc\n",
-      "writing to: T2003003.L3m_DAY_PAR_par_4km.nc\n",
-      "writing temporary file T2003003.L3m_DAY_PAR_par_4km.nc_tmp\n",
-      "downloaded T2003003.L3m_DAY_PAR_par_4km.nc\n",
-      "size = 29484289\n",
-      "--------------------\n",
-      "trying https://oceandata.sci.gsfc.nasa.gov/cgi/getfile/A2003004.L3m_DAY_PAR_par_4km.nc\n",
-      "writing to: A2003004.L3m_DAY_PAR_par_4km.nc\n",
-      "writing temporary file A2003004.L3m_DAY_PAR_par_4km.nc_tmp\n",
-      "downloaded A2003004.L3m_DAY_PAR_par_4km.nc\n",
-      "size = 44853249\n",
-      "trying https://oceandata.sci.gsfc.nasa.gov/cgi/getfile/T2003004.L3m_DAY_PAR_par_4km.nc\n",
-      "writing to: T2003004.L3m_DAY_PAR_par_4km.nc\n",
-      "writing temporary file T2003004.L3m_DAY_PAR_par_4km.nc_tmp\n"
+      "\n",
+      "T2003002.L3m_DAY_PAR_par_4km.nc already exists\n",
+      "and is 29478149 bytes\n",
+      "will not overwrite\n",
+      "\n"
      ]
     }
    ],
@@ -119,31 +99,24 @@
     "import numpy as np\n",
     "import time\n",
     "root=\"https://oceandata.sci.gsfc.nasa.gov/cgi/getfile\"\n",
-    "from e582utils.data_read import download,NoDataException\n",
+    "from e582utils.data_read2 import download\n",
     "for yearcount,year in enumerate(np.arange(2002,2018)):\n",
     "    if yearcount > 1:\n",
     "        break\n",
     "    for count,day in enumerate(np.arange(1,366)):\n",
-    "        if count > 3:\n",
+    "        if count > 2:\n",
     "            break\n",
     "        for satellite in ['A','T']:\n",
     "            filename='{}{}{:0>3}.L3m_DAY_PAR_par_4km.nc'.format(satellite,year,day)\n",
-    "            try:\n",
-    "                download(filename,root=root)\n",
-    "                time.sleep(3)\n",
-    "            except NoDataException as e:\n",
-    "                print(e)\n",
+    "            download(filename,root=root)\n",
+    "            time.sleep(3)\n",
     "        print('-'*20)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -166,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
