--- a/notebooks/web_download.ipynb
+++ b/notebooks/web_download.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,23 @@
       "T2003002.L3m_DAY_PAR_par_4km.nc already exists\n",
       "and is 29478149 bytes\n",
       "will not overwrite\n",
-      "\n"
+      "\n",
+      "--------------------\n",
+      "trying https://oceandata.sci.gsfc.nasa.gov/cgi/getfile/A2003003.L3m_DAY_PAR_par_4km.nc\n",
+      "writing to: A2003003.L3m_DAY_PAR_par_4km.nc\n",
+      "\n",
+      "A2003003.L3m_DAY_PAR_par_4km.nc already exists\n",
+      "and is 44399292 bytes\n",
+      "will not overwrite\n",
+      "\n",
+      "trying https://oceandata.sci.gsfc.nasa.gov/cgi/getfile/T2003003.L3m_DAY_PAR_par_4km.nc\n",
+      "writing to: T2003003.L3m_DAY_PAR_par_4km.nc\n",
+      "\n",
+      "T2003003.L3m_DAY_PAR_par_4km.nc already exists\n",
+      "and is 29484289 bytes\n",
+      "will not overwrite\n",
+      "\n",
+      "--------------------\n"
      ]
     }
    ],
