fix error message

--- a/notebooks/web_download.ipynb
+++ b/notebooks/web_download.ipynb
@@ -10,14 +10,13 @@
     "\n",
     "2) try aqua (A) and tera (T) separately\n",
     "\n",
-    "3) aqua data not available for 2002.  The website returns a 404 'Not found' error.  In this case make\n",
-    "   the download function throw a 'NoDataException'.  Since this error is expected, print the \n",
-    "   exception and continue.   If any other response is received, stop the download"
+    "3) aqua data not available for 2002.  The website returns a 404 'Not found' error, and the download function\n",
+    "   removes the tempfile and prints a message"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +114,7 @@
     "import numpy as np\n",
     "import time\n",
     "root=\"https://oceandata.sci.gsfc.nasa.gov/cgi/getfile\"\n",
-    "from e582utils.data_read2 import download\n",
+    "from e582utils.data_read2 import download,NoDataException\n",
     "for yearcount,year in enumerate(np.arange(2002,2018)):\n",
     "    if yearcount > 1:\n",
     "        break\n",
@@ -132,7 +131,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
